removed all downstream source

--- a/docs/modules/operator/partials/con-br-crd-overview.adoc
+++ b/docs/modules/operator/partials/con-br-crd-overview.adoc
@@ -3,39 +3,54 @@
 // assembly-deploying-broker-using-operator.adoc
 
 [id='con_br-crd-overview_{context}']
-= Overview of the {BrokerName} Operator Custom Resource Definitions
+= Overview of the {OperatorName} Operator Custom Resource Definitions
 
-In general, a Custom Resource Definition (CRD) is a schema of configuration items that you can modify for a custom {ClientTool} object deployed with an Operator. By creating a corresponding Custom Resource (CR) instance, you can specify values for configuration items in the CRD.
+In general, a Custom Resource Definition (CRD) is a schema of configuration items that you can modify for a custom {OpenShiftContainerName} object deployed with an Operator. By creating a corresponding Custom Resource (CR) instance, you can specify values for configuration items in the CRD.
 If you are an Operator developer, what you expose through a CRD essentially becomes the API for how a deployed object is configured and used. You can directly access the CRD through regular HTTP `curl` commands, because the CRD gets exposed automatically through Kubernetes.
-
-You can install the {OperatorName} Operator using either the {ClientTool} command-line interface (CLI), or the Operator Lifecycle Manager, through the OperatorHub graphical interface. In either case, the {BrokerName} Operator includes the CRDs described below
+ifndef::UpstreamBuild[]
+You can install the {OperatorName} Operator using either the {OpenShiftContainerName} command-line interface (CLI), or the Operator Lifecycle Manager, through the OperatorHub graphical interface. In either case, the {BrokerName} Operator includes the CRDs described below
 .
+endif::[]
 
 Main broker CRD:: You deploy a CR instance based on this CRD to create and configure a broker deployment.
+ifndef::UpstreamBuild[]
 +
 Based on how you install the Operator, this CRD is:
+endif::[]
 +
-* The `broker_activemqartemis_crd` file in the `crds` directory of the Operator installation archive (OpenShift CLI installation method)
+* The `broker_activemqartemis_crd` file in the `crds` directory of the Operator installation archive ({OpenShiftContainerName} CLI installation method)
+ifndef::UpstreamBuild[]
 * The `ActiveMQArtemis` CRD in the `Custom Resource Definitions` section of the {OpenShiftContainerName} web console (OperatorHub installation method)
+endif::[]
 
 Address CRD:: You deploy a CR instance based on this CRD to create addresses and queues for a broker deployment.
+ifndef::UpstreamBuild[]
 +
 Based on how you install the Operator, this CRD is:
+endif::[]
 +
-* The `broker_activemqartemisaddress_crd` file in the `crds` directory of the Operator installation archive (OpenShift CLI installation method)
+* The `broker_activemqartemisaddress_crd` file in the `crds` directory of the Operator installation archive ({OpenShiftContainerName} CLI installation method)
+ifndef::UpstreamBuild[]
 * The `ActiveMQArtemisAddresss` CRD in the `Custom Resource Definitions` section of the {OpenShiftContainerName} web console (OperatorHub installation method)
+endif::[]
 
 Scaledown CRD:: The *Operator* automatically creates a CR instance based on this CRD when instantiating a scaledown controller for message migration.
+ifndef::UpstreamBuild[]
 +
 Based on how you install the Operator, this CRD is:
+endif::[]
 +
-* The `broker_activemqartemisscaledown_crd` file in the `crds` directory of the Operator installation archive (OpenShift CLI installation method)
+* The `broker_activemqartemisscaledown_crd` file in the `crds` directory of the Operator installation archive ({OpenShiftContainerName} CLI installation method)
+ifndef::UpstreamBuild[]
 * The `ActiveMQArtemisScaledown` CRD in the `Custom Resource Definitions` section of the {OpenShiftContainerName} web console (OperatorHub installation method).
+endif::[]
 
 .Additional resources
 * To learn how to install the {BrokerName} Operator (and all included CRDs) using:
-** The OpenShift CLI, see xref:installing-broker-operator-cli_{context}[]
+** The {OpenShiftContainerName} CLI, see xref:installing-operator-cli.adoc#installing-broker-operator-cli_{context}[Installing the Operator]
+ifndef::UpstreamBuild[]
 ** The Operator Lifecycle Manager and OperatorHub graphical interface, see xref:managing-broker-operator-using-operator-lifecycle-manager_{context}[].
+endif::[]
 * For complete configuration references to use when creating CR instances based on the main broker and address CRDs, see:
 ** xref:reference.adoc#broker-crd_{context}[Broker Custom Resource configuration reference]
-** xref:addressing-crd_{context}[]
+** xref:reference.adoc#addressing-crd_{context}[Address Custom Resource configuration reference]
